# ccShield

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  start.cmd  start.command  start.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.omo/: boulder.json
.omo/drafts/: reccshield-refactor.md
.omo/evidence/: final-wave-F1-F2-F4.md  (+5 more)
backend/: README.md  pyproject.toml
backend/app/: __init__.py  config.py  main.py  quick_rooms.py
backend/app/api/: __init__.py  auth_routes.py  ban_routes.py  middleware.py  quick_room_routes.py  room_routes.py  router.py
backend/app/auth/: __init__.py  session.py
backend/app/bilibili/: __init__.py  auth.py  client.py  danmaku_ws.py  exceptions.py  message_buffer.py  protocol.py  wbi.py
backend/app/room/: __init__.py  banlist.py  bridge.py  events.py  session.py
backend/scripts/: __init__.py  capture_fixtures.py  check_fixtures.py
backend/tests/: __init__.py  conftest.py  test_api_auth.py  test_app.py  test_auth.py  test_ban_contract.py  test_ban_routes.py  test_banlist.py  test_client.py  test_config.py  test_danmaku_contract.py  test_danmaku_ws.py  test_exceptions.py  test_message_buffer.py  test_protocol.py  test_quick_rooms.py  test_release_launcher.py  test_room_bridge.py  test_room_routes.py  test_room_session.py  test_session.py  test_start_launcher.py  test_version_sync.py  test_wbi.py
config/: quick_rooms.example.json
docs/: README.md  api-client.md  config.md  release.md  security.md  smoke_test.md  testing.md
docs/plans/: v2.1.0.md
frontend/: .gitignore  eslint.config.js  index.html  openapi-ts.config.ts  openapi.json  package.json  tsconfig.json  vite.config.ts
packaging/: RELEASE-README.txt  ccshield.spec  release-notes.md
scripts/: check_secrets.sh  check_version.py  gen_client.sh  gen_schema.sh  release.py  report_pytest_failures.py  start.py
(+53 files in other folders)
